--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,5 +23,5 @@ ovirt_engine_setup_firewall_manager: 'firewalld'
 ovirt_engine_setup_update_all_packages: true
 ovirt_engine_setup_update_setup_packages: false
 
-ovirt_engine_setup_product_type: ovirt-engine
+ovirt_engine_setup_product_type: oVirt
 ovirt_engine_setup_package_list: []
