--- a/tasks/engine_setup.yml
+++ b/tasks/engine_setup.yml
@@ -27,12 +27,16 @@
     # WA for https://github.com/ansible/ansible/issues/34867
     command: yum -y update ovirt\*setup\*
     when: ovirt_engine_setup_update_setup_packages
+    tags:
+      - "skip_ansible_lint"  # ANSIBLE0006
 
   - name: Update all packages
     package:
       name: "*"
       state: latest
     when: ovirt_engine_setup_update_all_packages
+    tags:
+      - "skip_ansible_lint"  # ANSIBLE0010
 
   - name: Set accept defaults parameter if variable is set
     set_fact:
