--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,7 @@ ovirt_engine_setup_firewall_manager: 'firewalld'
 # https://www.ovirt.org/documentation/install-guide/chap-Installing_oVirt/
 ovirt_engine_setup_update_all_packages: true
 ovirt_engine_setup_update_setup_packages: false
+ovirt_engine_setup_offline: false
 
 ovirt_engine_setup_product_type: oVirt
 ovirt_engine_setup_package_list: []
