Add answerfile-path-on-remote option
Support using an answerfile's path which located on a remote machine
rather on localhost.

An example use case:
Hosted-engine-setup install engine-setup with ovirt-engine-appliance
which has the answerfile located inside of it.

--- a/tasks/engine_setup.yml
+++ b/tasks/engine_setup.yml
@@ -20,7 +20,12 @@
       mode: 0600
       owner: root
       group: root
-    when: ovirt_engine_setup_answer_file_path is defined
+    when: ovirt_engine_setup_answer_file_path is defined and ( ovirt_engine_setup_use_remote_answer_file is undefined or not ovirt_engine_setup_use_remote_answer_file )
+
+  - name: Use remote's answer file
+    set_fact:
+      answer_file_path: "{{ ovirt_engine_setup_answer_file_path }}"
+    when: ovirt_engine_setup_use_remote_answer_file
 
   - name: Update setup packages
     yum:
