--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,3 +26,4 @@ ovirt_engine_setup_offline: false
 
 ovirt_engine_setup_product_type: oVirt
 ovirt_engine_setup_package_list: []
+ovirt_engine_setup_use_remote_answer_file: false
