--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install required packages for oVirt Engine deployment
   include_tasks: install_packages.yml
+  when: not ovirt_engine_setup_perform_upgrade
 
 - name: Run engine setup
   include_tasks: engine_setup.yml
