--- a/ovirt-ansible-engine-setup.spec.in
+++ b/ovirt-ansible-engine-setup.spec.in
@@ -38,5 +38,22 @@ sh build.sh install
 %license LICENSE
 
 %changelog
+* Thu Oct 04 2018 Ondra Machacek <omachace@redhat.com> - 1.1.5-1
+- Add vacuum option when upgrading.
+
+* Fri Aug 31 2018 Ondra Machacek <omachace@redhat.com> - 1.1.4-1
+- Set false as default for ovirt_engine_setup_use_remote_answer_file.
+
+* Thu Aug 30 2018 Ondra Machacek <omachace@redhat.com> - 1.1.3-1
+- Add '--offline' option.
+- Add answerfile-path-on-remote option.
+- Require Ansible 2.5.
+
+* Wed Apr 11 2018 Ondra Machacek <omachace@redhat.com> - 1.1.2-1
+- Change ovirt_engine_setup_product_type parameter.
+
+* Thu Apr 5 2018 Ondra Machacek <omachace@redhat.com> - 1.1.1-1
+- Remove 3.6 and 4.0 from supported versions of this role.
+
 * Thu Dec 07 2017 Katerina Koukiou <kkoukiou@redhat.com> - 1.1.0-1
 - Initial release
