update_only has an effect only if state is latest
https://docs.ansible.com/ansible/2.5/modules/yum_module.html

--- a/tasks/engine_setup.yml
+++ b/tasks/engine_setup.yml
@@ -31,6 +31,7 @@
     yum:
       name: "ovirt*setup*"
       update_only: true
+      state: latest
     when: ovirt_engine_setup_update_setup_packages
     tags:
       - "skip_ansible_lint"  # ANSIBLE0006
