Support ovirt.engine-setup name
Change-Id: I7a232c2d8c4bec8dd289b9d064e33cb1b87775ff
Signed-off-by: Ondra Machacek <omachace@redhat.com>

--- a/examples/engine-deploy.yml
+++ b/examples/engine-deploy.yml
@@ -13,5 +13,5 @@
     ovirt_engine_setup_firewall_manager: null
     ovirt_repositories_ovirt_release_rpm: "http://plain.resources.ovirt.org/pub/yum-repo/ovirt-release42.rpm"
   roles:
-    - role: oVirt.repositories
-    - role: oVirt.engine-setup
+    - role: ovirt.repositories
+    - role: ovirt.engine-setup
