--- a/examples/engine-upgrade.yml
+++ b/examples/engine-upgrade.yml
@@ -12,7 +12,7 @@
     ovirt_engine_setup_firewall_manager: null
     ovirt_repositories_ovirt_release_rpm: "{{ ovirt_repositories_ovirt_release_rpm }}"
   roles:
-    - role: oVirt.repositories
-    - role: oVirt.engine-setup
+    - role: ovirt.repositories
+    - role: ovirt.engine-setup
       ovirt_engine_setup_update_packages: true
       ovirt_engine_setup_answer_file_path: "answerfile_{{ ovirt_engine_setup_version }}_upgrade.txt.j2"
