--- a/ovirt-ansible-engine-setup.spec.in
+++ b/ovirt-ansible-engine-setup.spec.in
@@ -51,6 +51,9 @@ sh build.sh install
 %license LICENSE
 
 %changelog
+* Wed Jan 16 2019 Ondra Machacek <omachace@redhat.com> - 1.1.7-1
+- Add option to perform upgrade.
+
 * Fri Nov 30 2018 Ondra Machacek <omachace@redhat.com> - 1.1.6-1
 - Require Ansible 2.7.2.
 - Support ovirt.engine-setup name.
