--- a/tasks/engine_setup.yml
+++ b/tasks/engine_setup.yml
@@ -20,7 +20,9 @@
       mode: 0600
       owner: root
       group: root
-    when: ovirt_engine_setup_answer_file_path is defined and ( ovirt_engine_setup_use_remote_answer_file is not defined or not ovirt_engine_setup_use_remote_answer_file )
+    when: ovirt_engine_setup_answer_file_path is defined and (
+      ovirt_engine_setup_use_remote_answer_file is not defined or not
+      ovirt_engine_setup_use_remote_answer_file)
 
   - name: Use remote's answer file
     set_fact:
