--- a/tasks/install_packages.yml
+++ b/tasks/install_packages.yml
@@ -15,7 +15,8 @@
   package:
     name: "{{ 'rhevm' if ovirt_engine_setup_version is version('4.2', '<') else 'rhvm' }}"
     state: present
-  when: ovirt_engine_setup_product_type | lower == 'rhv' and rhevm_installed.results | default([]) | selectattr('yumstate', 'match', 'installed') | list | length == 0
+  when: ovirt_engine_setup_product_type | lower == 'rhv' and rhevm_installed.results | default([]) | selectattr(
+    'yumstate', 'match', 'installed') | list | length == 0
 
 - name: Install rest of the packages required for oVirt Engine deployment
   package:
