--- a/automation.yaml
+++ b/automation.yaml
@@ -1,7 +1,4 @@
 distros:
-  - fc29
-  - fc30
   - el7
-  - el8
 release_branches:
-  master: [ "ovirt-master", "ovirt-4.3" ]
+  master: [ "ovirt-4.3" ]
