--- a/ovirt-ansible-engine-setup.spec.in
+++ b/ovirt-ansible-engine-setup.spec.in
@@ -51,6 +51,9 @@ sh build.sh install
 %license LICENSE
 
 %changelog
+* Mon Nov 25 2019 Martin Necas <mnecas@redhat.com> - 1.2.0-1
+- Bump ansible to version 2.9.0.
+
 * Tue Mar 12 2019 Ondra Machacek <omachace@redhat.com> - 1.1.9-1
 - Avoid warnings on ansible 2.8.
 - Added new answer for cinderlib.
