--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Get product version from rpm
+  include_tasks: set_engine_info.yml
+  when: ovirt_engine_setup_version is undefined
+
 - name: Install required packages for oVirt Engine deployment
   include_tasks: install_packages.yml
   when: not ovirt_engine_setup_perform_upgrade
