--- a/tasks/set_engine_info.yml
+++ b/tasks/set_engine_info.yml
@@ -5,26 +5,40 @@
   no_log: yes
 
 - set_fact:
-    ovirt_package_name: "{{ ansible_facts.packages | to_nice_json | regex_findall('\\b(ovirt-release.*)\\b') | unique|first|default(omit) }}"
+    ovirt_package_name: "{{ ansible_facts.packages | to_nice_json | regex_findall('\\b(ovirt-release.*)\\b') | unique | default(omit) }}"
+
+- fail:
+    msg: "Multiple versions of ovirt-release were found in host.\n
+          You need to specify which `ovirt_engine_setup_version` and `ovirt_engine_setup_product_type`."
+  when: ovirt_package_name | length > 1
+
 - set_fact:
-    ovirt_engine_setup_version: "{{ ansible_facts.packages[ovirt_package_name][0]['version'][:3] }}"
+    ovirt_engine_setup_version: "{{ ansible_facts.packages[ovirt_package_name[0]][0]['version'][:3] }}"
     ovirt_engine_setup_product_type: ovirt
   when: ovirt_package_name is defined
 
-- shell:
-    cmd: "subscription-manager repos --list-enabled | grep -oh 'Red Hat Virtualization Manager v[0-9].[0-9]'| tail -c 4"
-  register: sub_manager
-- set_fact:
-    ovirt_engine_setup_version: "{{ sub_manager.stdout_lines | first | default(omit)}}"
-    ovirt_engine_setup_product_type: rhv
-  when: ovirt_package_name is undefined and sub_manager.stdout_lines | length > 0
+- block:
+  - shell:
+      cmd: "subscription-manager repos --list-enabled | grep -oh 'Red Hat Virtualization Manager v[0-9].[0-9]'| tail -c 4"
+    register: sub_manager
+  - set_fact:
+      ovirt_engine_setup_version: "{{ sub_manager.stdout_lines | first | default(omit)}}"
+      ovirt_engine_setup_product_type: rhv
+    when: ovirt_package_name is undefined and sub_manager.stdout_lines | length > 0
 
-# when rhvm is not found in subscription-manager it will retry to find in packages
-- set_fact:
-    rhev_package_name: "{{ ansible_facts.packages | to_nice_json | regex_findall('\\b(rh?.vm.*)\\b') | unique | first | default(omit) }}"
-- set_fact:
-    ovirt_engine_setup_version: "{{ ansible_facts.packages[rhev_package_name][0]['version'][:3] }}"
-    ovirt_engine_setup_product_type: rhv
+  # when rhvm is not found in subscription-manager it will retry to find in packages
+  - set_fact:
+      rhev_package_name: "{{ ansible_facts.packages | to_nice_json | regex_findall('\\b(rh?.vm.*)\\b') | unique | default(omit) }}"
+
+  - fail:
+      msg: "Multiple versions of rhvm releases were found in host.\n
+            You need to specify which `ovirt_engine_setup_version` and `ovirt_engine_setup_product_type`."
+    when: rhev_package_name | length > 1
+
+  - set_fact:
+      ovirt_engine_setup_version: "{{ ansible_facts.packages[rhev_package_name[0]][0]['version'][:3] }}"
+      ovirt_engine_setup_product_type: rhv
+    when: ovirt_engine_setup_product_type is undefined and ovirt_engine_setup_product_type is undefined
   when: ovirt_engine_setup_product_type is undefined and ovirt_engine_setup_product_type is undefined
 
 - fail:
