--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Perform pre-install checks
+  include_tasks: pre_install_checks.yml
+
 - name: Install required packages for oVirt Engine deployment
   include_tasks: install_packages.yml
   when: not ovirt_engine_setup_perform_upgrade
