--- a/tasks/pre_install_checks.yml
+++ b/tasks/pre_install_checks.yml
@@ -9,4 +9,4 @@
     msg: '{{ ovirt_engine_setup_firewall_manager }} was chosen as a firewall manager but is not installed'
   when:
     - ovirt_engine_setup_firewall_manager not in ansible_facts.packages
-    - ovirt_engine_setup_firewall_manager|bool
+    - ovirt_engine_setup_firewall_manager is not none
