--- a/tasks/engine_setup.yml
+++ b/tasks/engine_setup.yml
@@ -45,13 +45,13 @@
     package:
       name: "*"
       state: latest
-    when: ovirt_engine_setup_update_all_packages|bool and not ovirt_engine_setup_offline|bool
+    when: not ovirt_engine_setup_offline|bool
     tags:
       - "skip_ansible_lint"  # ANSIBLE0010
 
   - name: Set offline parameter if variable is set
     set_fact:
-      offline: "{{ '--offline' if ovirt_engine_setup_offline else '' }}"
+      offline: "{{ '--offline' if ovirt_engine_setup_offline|bool else '' }}"
 
   - name: Run engine-setup with answerfile
     command: "engine-setup --accept-defaults --config-append={{ answer_file_path }} {{ offline }}"
