--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,7 +28,7 @@ ovirt_engine_setup_product_type: oVirt
 ovirt_engine_setup_package_list: []
 ovirt_engine_setup_use_remote_answer_file: false
 
-ovirt_engine_setup_perform_upgrade: false
+ovirt_engine_setup_perform_upgrade: true
 
 ovirt_engine_apache_config_ssl: true
 ovirt_engine_apache_config_root_redirection: true
