--- a/tasks/engine_setup.yml
+++ b/tasks/engine_setup.yml
@@ -73,6 +73,16 @@
     delay: 10
     until: health_page is success
 
+  - name: Run engine-config
+    command: "engine-config -s {{ item.name }}={{ item.value }}"
+    loop: "{{ ovirt_engine_setup_engine_configs | default([]) }}"
+
+  - name: Restart engine after engine-config
+    service:
+      name: ovirt-engine
+      state: restarted
+    when: ovirt_engine_setup_engine_configs is defined
+
   always:
     - name: Clean temporary files
       file:
