update readme and add apostrophes

--- a/tasks/engine_setup.yml
+++ b/tasks/engine_setup.yml
@@ -74,7 +74,7 @@
     until: health_page is success
 
   - name: Run engine-config
-    command: "engine-config -s {{ item.key }}={{ item.value }} {% if item.version is defined %} --cver={{ item.version }} {% endif %}"
+    command: "engine-config -s {{ item.key }}='{{ item.value }}' {% if item.version is defined %} --cver={{ item.version }} {% endif %}"
     loop: "{{ ovirt_engine_setup_engine_configs | default([]) }}"
 
   - name: Restart engine after engine-config
